--- a/instagram_ios/Podfile
+++ b/instagram_ios/Podfile
@@ -7,4 +7,6 @@ target 'instagram_ios' do
 
   # Pods for instagram_ios
   pod 'Alamofire'
+  pod 'Toast-Swift', '~> 5.0.1'
+  pod 'SnapKit', '~> 5.6.0'
 end
