- 게시글 이미지 띄우기

--- a/instagram_ios/Podfile
+++ b/instagram_ios/Podfile
@@ -10,4 +10,5 @@ target 'instagram_ios' do
   pod 'Toast-Swift', '~> 5.0.1'
   pod 'SnapKit', '~> 5.6.0'
   pod 'Then'
+  pod "BSImagePicker", "~> 3.1"
 end
